--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product: ruby
+  product: oneUpShirt
   order: one
 
 two:
-  product: ruby
+  product: oneUpShirt
   cart: one
